# deadman

./: .editorconfig  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Dockerfile  justfile
.github/workflows/: rust.yml
.sqlx/: query-06680f0257d2c6ac80c9fabd010bd9538ca4ab5794474a9df9242c35f7c5cc13.json  query-259316501dbc799144c25e6ca99554d5065d45d066b312458fde9562dfe16a34.json  query-3aa12a67d24307102215f60aa4095f190ecc019c34b03c3ed49b8e1ac5f7fab2.json  query-67fe915f8ac705d8f379d81da6961ff6c28539a3e2238bbb82ac57652b7d6a84.json  query-a4556ac51c3c8faaee2f6880eeabf85ff8bef0fc761e2f0fb10a60d90a77c49c.json  query-fc7a68bab5e2352ce732f4ee1bfeea78b0f25e95f1eabdabfed0f62e373cb52f.json
migrations/: 20231101135136_init.up.sql  20231105065130_last_notification.up.sql
src/: config.rs  lib.rs  main.rs  tasks.rs  telegram.rs
src/fixtures/: users.sql
src/html/: ask_not_dead.html
