[package]
name = "deadman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.2", features = [ "runtime-tokio", "sqlite"] }
axum = "0.6.20"
tracing-subscriber = "0.3.17"
tracing = "0.1.40"
serde = "1.0.190"
tokio = {version = "1.33.0", features = ["full"]}
anyhow = "1.0.75"
chrono = "0.4.31"
teloxide = {version=  "0.12.2", features = ["macros"]}
uuid = {version = "1.5.0", features = ["v7"]}

[dev-dependencies]
axum-test = "13.1.1"
